--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/css-modules": "^1.0.2",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.45.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.0"
   }
