--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^1.1.4",
     "sass": "^1.47.0",
     "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "vite": "^2.7.10",
+    "vite-tsconfig-paths": "^3.4.1"
   }
 }
