--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "i18next": "^21.6.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.6",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
