--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@reduxjs/toolkit": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
