--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.6",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-select": "^5.2.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
