--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/css-modules": "^1.0.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-transition-group": "^4.4.4",
     "@vitejs/plugin-react": "^1.1.4",
     "sass": "^1.47.0",
     "typescript": "^4.5.4",
